# FoxML_Core

./: .gitignore  ATTESTATION_INSTITUTIONAL_USE.md  AUDIT_REPORT_snapshotting_and_batch_universe.md  CHANGELOG.md  COMMERCIAL LICENSE.md  COMMERCIAL.md  COMMERCIAL_LICENSE.md  COMMIT_MESSAGE.md  COMMIT_MESSAGE.txt  COMPLIANCE.md  CONFIG_UPDATE_MESSAGE.md  CONSULTING.md  CONSULTING_POLICY.md  CONSULTING_PRICING.md  COPYRIGHT_HEADER_CHECK.md  Citation.cff  DECLARATION_OF_COMPLIANT_USE.md  DEEPER_LEAK_FIX.md  DEFINITIONS.md  DOCUMENTATION_REVIEW.md  DUAL_LICENSE.md  ENFORCEMENT.md  EXCEPTION.md  EXCEPTION.txt  EXCEPTION_CONT.txt  EXECPTION.md  FINAL_LEAKAGE_SUMMARY.md  FLOWCHART.md  FOXML_1.0_MANIFEST.md  HUMANITARIAN_LICENSE.md  INSTALL.md  INTERNAL_USE_CERTIFICATION.md  LEAKAGE_FIXED_NEXT_STEPS.md  LICENSE  LICENSING.md  MASTER_CONSULTING_AGREEMENT.md  MASTER_TEMPLATE.md  NOTICE  NOTICE.md  QUICK_START_CLEAN_BASELINE.md  (+24 more)
.github/: pull_request_template.md
ALPACA_trading/: README.md
CONFIG/: CHANGELOG.md  COVERAGE_ANALYSIS.md  README.md  comprehensive_feature_ranking.yaml  config_builder.py  config_loader.py  config_migrator.py  config_schemas.py  defaults.yaml  excluded_features.yaml  fast_target_ranking.yaml  feature_registry.yaml  feature_selection_config.yaml  find_hardcoded_paths.py  identity_config.yaml  logging_config.yaml  logging_config_utils.py  migrate_structure.py  multi_model_feature_selection.yaml  target_configs.yaml
DATA_PROCESSING/: README.md
DOCS/: ARCHITECTURE.md  CROSS_REFERENCES.md  INDEX.md  LEGAL_INDEX.md
ENTERPRISE_BUNDLE/: BUNDLE_INDEX.md  LICENSE  README.md
IBKR_trading/: README.md  copy_models_from_alpaca.py  run_comprehensive_test.sh  run_daily_test.sh  run_trading_system.py  switch_to_intraday.py  test_all_models_comprehensive.sh  test_cpp_components.py  test_daily_models.py  test_ibkr_integration.py  test_quick_models.sh  test_unified_system.py
IBKR_trading/cpp_engine/: CMakeLists.txt  build.sh
IBKR_trading/cpp_engine/benchmarks/: benchmark_inference.cpp
IBKR_trading/cpp_engine/include/: common.h  feature_pipeline.h  inference_engine.h  linear_algebra_engine.h  market_data_parser.h
IBKR_trading/cpp_engine/python_bindings/: inference_engine_bindings.cpp  setup.py  trading_kernels.cpp
IBKR_trading/cpp_engine/src/: feature_pipeline.cpp  inference_engine.cpp  linear_algebra_engine.cpp  market_data_parser.cpp
INTERNAL_DOCS/: CHANGELOG_TEMPLATE.md  DETAILED_RELEASE_NOTES.md  DOCS_INTERNAL_README.md  INDEX.md  INTERNAL_HANDBOOK.md  LEGAL_ASSESSMENT.md  LEGAL_SUITE_UPDATE_REQUIRED.md  ORGANIZATION_SUMMARY.md  README.md  journallog.md
LEGAL/: ACADEMIC.md  ACCEPTABLE_USE_POLICY.md  BROKER_COMPLIANCE_CHECKLIST.md  BROKER_INTEGRATION_COMPLIANCE.md  BUSINESS_CONTINUITY_PLAN.md  CHANGELOG_ENTERPRISE.md  CLA.md  CLIENT_ONBOARDING.md  COMMERCIAL_USE.md  COMPLIANCE_FAQ.md  COPYRIGHT_NOTICE.md  CREDITS.md  DATA_PROCESSING_ADDENDUM.md  DATA_RETENTION_DELETION_POLICY.md  DECISION_MATRIX.md  ENTERPRISE_CHECKLIST.md  ENTERPRISE_DELIVERY.md  EXPORT_COMPLIANCE.md  FAQ.md  GRADUATED_CLOSE_MODEL.md  INCIDENT_RESPONSE_PLAN.md  INDEMNIFICATION.md  INFOSEC_SELF_ASSESSMENT.md  IP_ASSIGNMENT_AGREEMENT.html  IP_ASSIGNMENT_AGREEMENT.md  IP_OWNERSHIP_CLARIFICATION.md  LICENSE_ENFORCEMENT.md  LICENSING.md  LICENSING_AUDIT_REPORT.md  LOOPHOLE_AUDIT.md  PENETRATION_TESTING_STATEMENT.md  PRIVACY_POLICY.md  PRODUCTION_USE_NOTIFICATION.md  QUICK_REFERENCE.md  README.md  REGULATORY_DISCLAIMERS.md  RELEASE_NOTES_TAGGING_STANDARD.md  RELEASE_POLICY.md  RISK_ASSESSMENT_MATRIX.md  ROADMAP_BOUNDARIES.md  (+9 more)
SCRIPTS/: MULTI_MODEL_QUICKSTART.sh  analyze_feature_importances.py  clear_test_cache.sh  compare_feature_sets.py  compliance_check.py  diagnose_leakage.py  filter_leaking_features.py  find_leaking_features.py  list_available_symbols.py  multi_model_feature_selection.py  process_25_symbols.sh  process_25_symbols_to_labeled_v2.py  process_25_symbols_to_v3.py  rank_features_by_ic_and_predictive.py  rank_features_comprehensive.py  rank_target_predictability.py  regenerate_enterprise_pdfs.py  remove_targets_from_checkpoint.py  restore_checkpoint_from_logs.py  run_baseline_validation.sh  run_comprehensive_feature_ranking.sh  run_feature_ranking.sh  run_regime_enhancement.sh  run_target_ranking_demo.sh  show_existing_output.sh  test_auto_rerun.sh  test_fresh_e2e.sh  test_phase2_feature_selection.py  test_ranking_e2e.sh  train_all_symbols.sh
TRAINING/: CLEANUP_PLAN.md  DETERMINISM_AUDIT.md  README.md  __init__.py  target_router.py  test_e2e_pipeline.sh  test_imports.py  test_intelligent_pipeline.sh  test_leakage_fixes.sh  test_leakage_quick.sh  test_leakage_system_comprehensive.py  train.py  train_crypto_models.py  train_with_strategies.py  unified_training_interface.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
config/: safe_features_list.txt
demo/: README.md  run_demo.py
dep/: GPU_FEATURE_SELECTION_GUIDE.md  LEAKAGE_FIX_README.md  QUICK_START_GPU.md  aggregate_feature_groups.py  build_lightgbm_cuda.sh  check_gpu_setup.py  compare_target_features.py  identify_leaking_features.py  process_single_symbol.py  run_full_pipeline.sh  run_multi_target_selection.py  select_features.py  select_features_fixed.py  test_quick_ranking.py  train_single_model.py  verify_setup.py  view_results.py
docs/: INDEX.md  LEGAL_INDEX.md  TEST_FILES_ORGANIZATION.md  readline_fix_analysis.md
enterprise_bundle/: BUNDLE_INDEX.md  README.md
legal/: ACCEPTABLE_USE_POLICY.md  BUSINESS_CONTINUITY_PLAN.md  CHANGELOG_ENTERPRISE.md  CLA.md  CLIENT_ONBOARDING.md  COMMERCIAL_LICENSE.md  COMMERCIAL_USE.md  COMPLIANCE_FAQ.md  COPYRIGHT_NOTICE.md  CREDITS.md  Comprehensive overview.md  DATA_PROCESSING_ADDENDUM.md  DATA_RETENTION_DELETION_POLICY.md  ENTERPRISE_CHECKLIST.md  EXPORT_COMPLIANCE.md  INCIDENT_RESPONSE_PLAN.md  INDEMNIFICATION.md  INFOSEC_SELF_ASSESSMENT.md  IP_OWNERSHIP_CLARIFICATION.md  LICENSING.md  PRIVACY_POLICY.md  README.md  RELEASE_NOTES_TAGGING_STANDARD.md  RELEASE_POLICY.md  RISK_ASSESSMENT_MATRIX.md  SECURITY.md  SUBSCRIPTIONS.md  SUPPORT_POLICY.md  TOS.md  (+2 more)
(+1090 files in other folders)
